<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="165dp"
    android:layout_gravity="center"
    android:maxWidth="165dp"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <androidx.cardview.widget.CardView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp">


        <LinearLayout
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_offre"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developpeur_web"
                android:maxLines="2"
                android:minLines="2"
                android:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/company_offre"
                android:textColor="@color/colorBlack"
                android:paddingLeft="12dp"
                android:paddingTop="5dp"
                android:textStyle="bold|italic"
                android:paddingRight="4dp"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esiea"
                android:maxLines="3"
                android:minLines="1"
                android:fontFamily="sans-serif" />
            <TextView
                android:id="@+id/location_offre"
                android:textColor="@color/colorBlack"
                android:paddingLeft="12dp"
                android:paddingTop="5dp"
                android:paddingRight="4dp"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paris"
                android:maxLines="3"
                android:minLines="1"
                android:fontFamily="sans-serif" />
            <TextView
                android:id="@+id/location_type"
                android:textColor="@color/colorBlack"
                android:paddingLeft="12dp"
                android:paddingTop="5dp"
                android:paddingRight="4dp"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_time"
                android:maxLines="3"
                android:minLines="1"
                android:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/text_date_card_offre"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/poste_le_07_02_2019"
                android:textSize="10sp"
                android:fontFamily="sans-serif"
                android:background="@color/colorWhite"/>






        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
