<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_del_formation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_remove"
        android:padding="4dp"
        android:layout_alignParentRight="true"
        android:rotation="270"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp"
                android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_debut_formation"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_de_debut"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_fin_formation"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_de_fin"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="0dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp"
                android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_nom_formation"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/nom"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="0dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp"
                android:paddingBottom="40dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_instution_formation"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/institution"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>